[package]
name = "archive_dl"
version = "2.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
hex = "0.4"
tokio = { version = "1.43", features = ["sync", "rt-multi-thread", "macros"] }
sha1 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = "0.1"
bitvec = "1.0"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
miniz_oxide = "0.8"
image = { version = "0.25", default-features = false, features = ["rayon", "dds", "png"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.0"
zip = "0.6"
dashmap = "5"
walkdir = "2"
parking_lot = "0.12.3"
rusqlite = { version = "0.29", features = ["bundled"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
bson        = "2.5"
reqwest = "0.12.18"
